# telegrab

./: .env.example  .gitignore  Cargo.toml  README.md  TODO.md  cliff.toml  deny.toml
configuration/: base.yaml  local.yaml  production.yaml
contrib/: Caddyfile  telegrab.service  telegrab.socket
crates/telegrab/: Cargo.toml
crates/telegrab/src/: backtrace.rs  configuration.rs  errors.rs  format.rs  graceful.rs  http_client.rs  lib.rs  listener.rs  main.rs  startup.rs  state.rs  telemetry.rs  worker.rs
crates/telegrab/src/controller/: assets.rs  cbz.rs  gallery.rs  mod.rs  pic.rs  task.rs
crates/telegrab/src/middleware/: mod.rs
crates/telegrab/src/model/: mod.rs
crates/telegrab/src/model/dto/: doc.rs  mod.rs  pagination.rs
crates/telegrab/src/model/entity/: doc.rs  pic.rs  task.rs
crates/telegrab/src/repository/: mod.rs
crates/telegrab/src/schema/: album_mutation.rs  album_query.rs  helper.rs  image_query.rs  mod.rs  node_query.rs  root_schema.rs  task_mutation.rs  task_query.rs  task_subscription.rs
crates/telegrab/src/service/: cbz.rs  doc.rs  helper.rs  mod.rs  pic.rs
migrations/: 20251225150803_create_doc_table.sql  20251225150959_create_pic_table.sql  20251225152414_create_cbz_table.sql
ref/: ComicInfo.xml  TGIDownloader_EN.py
scripts/: init_db.sh  init_redis.sh  init_user.sh
src/: backtrace.rs  configuration.rs  errors.rs  grab_worker.rs  graceful.rs  http_client.rs  lib.rs  listener.rs  main.rs  shutdown_signal.rs  startup.rs  state.rs  telegraph_client.rs  telegraph_parser.rs  telemetry.rs  worker.rs
src/controller/: cbz.rs  doc.rs  health_check.rs  mod.rs  notification.rs  notifications.rs  pic.rs  task.rs
src/middleware/: mod.rs  request_id.rs
src/model/dto/: cbz.rs  doc.rs  mod.rs  pagination.rs  pic.rs
src/model/entity/: cbz.rs  doc.rs  mod.rs  pic.rs  task.rs
src/service/: cbz.rs  doc.rs  mod.rs  pic.rs
