[package]
name = "telegrab"
version = "0.1.0"
edition = "2024"
authors = ["Jonir Rings <i@jonirrings.com>"]
description = """
fetch all pics in a telegra.ph/teletype.in page,
and archive it into a comic pack.
"""

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "telegrab"

[dependencies]
anyhow = "1.0.93"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.8", features = ["macros", "tracing"] }
axum-extra = { version = "0.12.3", features = ["cookie", "typed-header"] }
axum-messages = "0.8.0"
axum-server = "0.8.0"
axum_session = "0.17.1"
axum_session_redispool = "0.8.0"
backtrace_printer = "1.3.0"
base64 = "0.22.1"
colored = "3.0.0"
config = "0.15.19"
convert_case = "0.10.0"
futures-util = { version = "0.3.31", features = ["sink", "std"] }
hyper = "1.8.1"
listenfd = "1.0.2"
mime = "0.3.17"
rand = { version = "0.8.5", features = ["std_rng"] }
redis = "1.0.1"
redis_pool = "0.10.0"
regex = "1.12.2"
reqwest = { version = "0.12.27", features = ["json", "rustls-tls"] }
scraper = "0.25.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.146"
serde_urlencoded = "0.7.1"
serde_variant = "0.1.3"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "time", "migrate", "uuid"] }
tera = "1.20.1"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["serde-human-readable"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["compression-full", "trace", "add-extension", "set-header"] }
tower-sessions = "0.14.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
unicode-segmentation = "1.12.0"
uuid = "1.19.0"
validator = "0.20.0"
log = "0.4.29"

[dev-dependencies]
claim = "0.5.0"
fake = "4.4.0"
http-body-util = "0.1.3"
linkify = "0.10.0"
once_cell = "1.21.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
wiremock = "0.6.5"
