[package]
name = "telegrab"
version = "0.1.0"
edition = "2024"
authors = ["Jonir Rings <i@jonirrings.com>"]
description = """
fetch all pics in a telegra.ph/teletype.in page,
and archive it into a comic pack.
"""

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "telegrab"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.8.8", features = ["macros", "tracing"] }
backtrace_printer = "1.3.0"
colored = "3.0.0"
config = "0.15.19"
convert_case = "0.10.0"
futures-util = { version = "0.3.31", features = ["sink", "std"] }
hyper = "1.8.1"
listenfd = "1.0.2"
regex = "1.12.2"
reqwest = { version = "0.12.27", features = ["json", "rustls-tls"] }
scraper = "0.25.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.146"
serde_variant = "0.1.3"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "time", "migrate", "uuid"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["serde-human-readable"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.6.8", features = ["compression-full", "trace", "add-extension", "set-header", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
validator = "0.20.0"
url = "2.5.7"
zip = "7.0.0"
quick-xml = { version = "0.38.4", features = ["serialize"] }
notify = "8.2.0"
futures = "0.3.31"

[dev-dependencies]
claim = "0.5.0"
fake = "4.4.0"
http-body-util = "0.1.3"
linkify = "0.10.0"
once_cell = "1.21.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
wiremock = "0.6.5"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1