[package]
name = "telegrab"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = """
fetch all pics in a telegra.ph/teletype.in page,
and archive it into a comic pack.
"""

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "telegrab"

[dependencies]
anyhow = "1.0"
async-graphql = { version = "8.0.0-rc.1", features = ["time", "url", "dataloader", "apollo_persisted_queries"] }
async-graphql-axum = "8.0.0-rc.1"
axum = { version = "0.8.8", features = ["macros", "tracing"] }
backtrace_printer = "1.3.0"
base64 = "0.22.1"
colored = "3.1.1"
config = { version = "0.15.19", default-features = false, features = ["yaml"] }
convert_case = "0.10.0"
futures = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink", "std"] }
hyper = "1.8.1"
notify = "8.2.0"
quick-xml = { version = "0.39.0", features = ["serialize"] }
regex = "1.12.2"
reqwest = "0.13"
scraper = "0.25.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.146"
serde_variant = "0.1.3"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "macros"] }
sqlx-postgres = { version = "0.8", features = ["uuid", "time"] }
thiserror = "2.0.18"
time = { version = "0.3.46", features = ["serde-human-readable"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.6.8", features = ["trace", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
url = "2.5"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
validator = "0.20.0"
zip = { version = "7.2.0", default-features = false, features = ["time"] }

# unix specific deps
[target."cfg(unix)".dependencies]
listenfd = "1.0.2"
